# TrueType

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/java/com/babo/ttf/: App.kt
app/src/main/java/com/babo/ttf/io/: FileReader.kt
app/src/main/java/com/babo/ttf/model/: Font.kt  FontInfo.kt
app/src/main/java/com/babo/ttf/tables/: Table.kt  TableInfo.kt  cmap.kt  cmap_mapping.kt  head.kt  hhea.kt  maxp.kt  name.kt  os_2.kt
app/src/test/java/com/babo/ttf/: AppTest.kt
app/src/test/java/com/babo/ttf/model/: FileInfoTest.kt  FontTest.kt
app/src/test/java/com/babo/ttf/tables/: TablesTest.kt
gtest/: CMakeLists.txt  README.md  build.sh  gtest_build.sh
gtest/test_cases/: test_fixed.cpp  test_reader.cpp
src/: CMakeLists.txt  main.cpp
src/base/: ReadWrite.h  Reader.h  types.h
src/doc/: Font.cpp  Font.h  FontInfo.h
src/include/: Api.h
src/tables/: Table.h  TableBuilder.h  TableInfo.h  cmap.h  cmap_mapping.cpp  cmap_mapping.h  head.h  hhea.h  hmtx.h  maxp.h  name.h  os_2.h  post.h
src/types/: Fixed.h
